--- a/src/main/java/ch/juventus/javafx/myLayout.fxml
+++ b/src/main/java/ch/juventus/javafx/myLayout.fxml
@@ -21,7 +21,7 @@
               alignment="BASELINE_CENTER" styleClass="header">
             <Label text="Hello world" />
         </HBox>
-        <Label text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+        <Label styleClass="label" text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
         <TextField fx:id="name" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.columnSpan="2"/>
         <HBox spacing="10" alignment="bottom_right"
               GridPane.columnIndex="2" GridPane.rowIndex="3">
