--- a/src/main/java/ch/juventus/javafx/stylesheet.css
+++ b/src/main/java/ch/juventus/javafx/stylesheet.css
@@ -1,8 +1,14 @@
 .header {
     -fx-font-size: 20px;
-    -fx-background-color: #a89758;
+    -fx-background-color:  #1e90ff;
+    -fx-font-weight: bold;
 }
 
 .layout {
-    -fx-background-color: #ccc3a1;
+    -fx-background-color: #40cc75;
+}
+
+.label{
+    -fx-font-family: Consolas;
+    -fx-font-weight: bold;
 }
